<resources>
    <string name="app_name">Depensy</string>

    <string name="transaction">Transaction</string>
    <string name="budget">Budget</string>
    <string name="create_new_budget">Create new budget</string>
    <string name="add_transaction">New transaction</string>
    <string name="create_budget">Create new budget</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="name">Name</string>
    <string name="add_budget">Add budget</string>
    <string name="settings">Settings</string>
    <string name="expenses">Expenses</string>
    <string name="add_expense">Add Expense</string>

    <string name="enable_notifications">notifications</string>
    <string name="build_version">Build version</string>
    <string name="notifications">Notifications</string>

    <string name="overview">Overview</string>
    <string name="stats">Stats</string>
    <string name="info">Info</string>

    <string name="total_spent_today">Total spent today</string>
    <string name="latest_expenses">Latest expenses</string>
    <string name="see_all">See All</string>
    <string name="home">Home</string>

    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="fcfa">FCFA</string>

    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="expenses_time">the time the expense was made</string>
    <string name="current_balance">Current balance</string>
    <string name="category">Category</string>
    <string name="expense_category">Expense category</string>

    <string name="onboarding_slide1_title">Welcome</string>
    <string name="onboarding_slide2_title">Welcome</string>
    <string name="onboarding_slide3_title">Welcome</string>

    <string name="onboarding_slide1_subtitle">Control your money</string>
    <string name="onboarding_slide2_subtitle">Balance your income and expenses</string>
    <string name="onboarding_slide3_subtitle">Achieve your financial goals</string>

    <string name="onboarding_slide1_desc">Seamlessly and intuitively track your spending in one place</string>
    <string name="onboarding_slide2_desc">Get a 360 view on your money; what comes in, what goes out.</string>
    <string name="onboarding_slide3_desc">Depensy empower you to set and achieve financial goals. </string>

    <string name="button_share_this_app">Share this app&#8230;</string>
    <string name="button_open_source_licenses">Open source licenses</string>
    <string name="title_share">Share %s</string>
    <string name="subject_share">Get the %s app</string>
    <string name="text_share">Manage your money.\n\nGet the %1$s app:\n%2$s</string>
    <string name="Share">Share this app</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="about_title">Expense manager</string>
    <string name="dismiss">Dismiss</string>
    <string name="about_body"><![CDATA[
        Designed &amp; developed by <b>Farouk Sabiou</b>.<br/>
        <a href=\'https://twitter.com/sabiiou\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://github.com/sabiou\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/farouksabiou\'>LinkedIn</a><br/><br/>
        This project is <a href=\'https://github.com/sabiou/expense-manager\'>open source</a>, and is
        licensed under Apache 2.0.
  ]]></string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>