<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newExpenseViewModel"
            type="dev.farouk.depensy.ui.expenses.NewExpenseViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="dev.farouk.depensy.ui.expenses.NewExpenseFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:elevation="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:attr/colorBackground"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center"
                    android:text="@string/add_new_expense"
                    android:textAppearance="@style/ExpenseManagerTextAppearance.ToolbarTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ExpenseManagerTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEdtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textNoSuggestions"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ExpenseManagerTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEdtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddNewExpense"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:minHeight="60dp"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/add"
            app:rippleColor="@color/colorPrimary"
            app:cornerRadius="20dp" />
    </LinearLayout>

</layout>